--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,2 +1,11 @@
+= render 'shared/errors', resource: @answer
+
 h1= @question.title
 p= @question.body
+
+= render @question.answers
+
+= form_with model: [@question, @answer], local: true do |f|
+  = f.label :body
+  = f.text_area :body
+  = f.submit 'Answer'
