--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,4 +1,9 @@
 p= answer.body
 
 - if current_user&.author_of?(answer)
-  p= link_to 'Delete answer', question_path(@question, answer), method: :delete
+  p= link_to 'Delete answer', answer, method: :delete
+  p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
+  = form_with model: answer, class: 'hidden', method: :patch, html: { id: "edit-answer-#{answer.id}" } do |f|
+    = f.label :body, 'Your answer'
+    = f.text_area :body
+    = f.submit 'Save'
