--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,8 +1,9 @@
 = render 'shared/errors', resource: @question
 
-= form_with model: @question do |f|
+p= link_to 'list of questions', questions_path
+= form_with model: @question, local: true do |f|
   = f.label :title
   = f.text_field :title
   = f.label :body
   = f.text_area :body
-  = f.submit 'Ask'
+  = f.submit 'Ask' 
