--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,15 +1,18 @@
-= render 'shared/errors', resource: @answer
-
 h1= @question.title
 p= @question.body
+
+p= link_to 'Back', questions_path
 
 - if current_user&.author_of?(@question)
   p= link_to 'Delete question', question_path(@question), method: :delete
 
+.answers
+  = render @question.answers
 
-= render @question.answers
-
-= form_with model: [@question, @answer], local: true do |f|
-  = f.label :body
-  = f.text_area :body
-  = f.submit 'Answer'
+.answer-errors
+  = render 'shared/errors', resource: @answer
+- if user_signed_in?  
+  = form_with model: [@question, @answer], class: 'new-answer' do |f|
+    = f.label :body
+    = f.text_area :body
+    = f.submit 'Answer'
