--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,10 +1,6 @@
-h1= @question.title
-p= @question.body
+= render @question
 
 p= link_to 'Back', questions_path
-
-- if current_user&.author_of?(@question)
-  p= link_to 'Delete question', question_path(@question), method: :delete
 
 .answers
   = render @question.answers
