--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,3 +1,3 @@
 <% if @answer.destroyed? %>
-  $('#answer-destroy-' + <%= @answer.id %>).remove();
+  $('#answer-' + <%= @answer.id %>).remove();
 <% end %>
