--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,6 +5,10 @@
 
 p= link_to 'Back', questions_path
 
+- if @question.files.attached?
+  - @question.files.each do |file|
+    p= link_to file.filename.to_s, url_for(file)
+
 .answers
   = render @question.answers
 
