--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -16,6 +16,11 @@ p= link_to 'Back', questions_path
   = render 'shared/errors', resource: @answer
 - if user_signed_in?
   = form_with model: [@question, @answer], class: 'new-answer' do |f|
-    = f.label :body
-    = f.text_area :body
+    p
+      = f.label :body
+      = f.text_area :body
+      
+    p
+      = f.label :files
+      = f.file_field :files, multiple: true
     = f.submit 'Answer'
