--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,8 +7,13 @@ div id="answer-#{answer.id}" class=(answer.best ? 'best' : '')
     p= link_to 'Delete answer', answer, remote: true, method: :delete
     p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
     = form_with model: answer, class: 'hidden', method: :patch, html: { id: "edit-answer-#{answer.id}" } do |f|
-      = f.label :body, 'Your answer'
-      = f.text_area :body
+      p
+        = f.label :body, 'Your answer'
+        = f.text_area :body
+
+      p
+        = f.label :files
+        = f.file_field :files, multiple: true
       = f.submit 'Save'
   - if current_user&.author_of?(answer.question) && answer.id
     p= link_to 'Best', choose_the_best_answer_path(answer), class: "best-answer", method: :patch, remote: true
