Author can delete any files attached to his question or answer

--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,9 +1,11 @@
 .question
   p= @question.title
   p= @question.body
-  = if @question.files.attached?
+  - if @question.files.attached?
     - @question.files.each do |file|
-      p= link_to file.filename.to_s, url_for(file)
+      div id= file.id
+        p= link_to file.filename.to_s, url_for(file)
+        p= link_to 'Delete file', attachment_path(file), method: :delete, remote: true
 
   - if current_user&.author_of?(@question)
     p= link_to 'Delete question', question_path(@question), method: :delete
