--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,9 +2,13 @@ div id="answer-#{answer.id}" class=(answer.best ? 'best' : '')
   span= answer.body
   - if answer.files.attached?
       - answer.files.each do |file|
-        p= link_to file.filename.to_s, url_for(file)
+        div id= file.id
+          p
+            = link_to file.filename.to_s, url_for(file)
+            =" "
+            = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
   - if current_user&.author_of?(answer)
-    p= link_to 'Delete answer', answer, remote: true, method: :delete
+    p= link_to ' Delete answer', answer, remote: true, method: :delete
     p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
     = form_with model: answer, class: 'hidden', method: :patch, html: { id: "edit-answer-#{answer.id}" } do |f|
       p
