--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -4,8 +4,10 @@
   - if @question.files.attached?
     - @question.files.each do |file|
       div id= file.id
-        p= link_to file.filename.to_s, url_for(file)
-        p= link_to 'Delete file', attachment_path(file), method: :delete, remote: true
+        p
+          = link_to file.filename.to_s, url_for(file)
+          =" "
+          = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
 
   - if current_user&.author_of?(@question)
     p= link_to 'Delete question', question_path(@question), method: :delete
