--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -6,7 +6,8 @@ div id="answer-#{answer.id}" class=(answer.best ? 'best' : '')
           p
             = link_to file.filename.to_s, url_for(file)
             = " "
-            = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
+            - if current_user&.author_of?(answer)
+              = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
   - if current_user&.author_of?(answer)
     p= link_to ' Delete answer', answer, remote: true, method: :delete
     p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
@@ -19,5 +20,5 @@ div id="answer-#{answer.id}" class=(answer.best ? 'best' : '')
         = f.label :files
         = f.file_field :files, multiple: true
       = f.submit 'Save'
-  - if current_user&.author_of?(answer.question) && answer.id
+  - if current_user&.author_of?(answer.question) && answer.persisted?
     p= link_to 'Best', choose_the_best_answer_path(answer), class: "best-answer", method: :patch, remote: true
