--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -7,7 +7,8 @@
         p
           = link_to file.filename.to_s, url_for(file)
           =" "
-          = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
+          - if current_user&.author_of?(@question)
+            = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
 
   - if current_user&.author_of?(@question)
     p= link_to 'Delete question', question_path(@question), method: :delete
