--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,5 +1,11 @@
 div id="answer-#{answer.id}" class=(answer.best ? 'best' : '')
   span= answer.body
+  - if answer.persisted?
+    .linkss
+      p Links:
+      ul
+        - answer.links.each do |link|
+          li= link_to link.name, link.url
   - if answer.files.attached?
       - answer.files.each do |file|
         div id= file.id
@@ -9,7 +15,7 @@ div id="answer-#{answer.id}" class=(answer.best ? 'best' : '')
             - if current_user&.author_of?(answer)
               = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
   - if current_user&.author_of?(answer)
-    p= link_to ' Delete answer', answer, remote: true, method: :delete
+    p= link_to 'Delete answer', answer, remote: true, method: :delete
     p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
     = form_with model: answer, class: 'hidden', method: :patch, html: { id: "edit-answer-#{answer.id}" } do |f|
       p
