--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,11 +1,18 @@
 div id="answer-#{answer.id}" class=(answer.best ? 'best' : '')
   span= answer.body
   - if answer.persisted?
-    .linkss
-      p Links:
-      ul
-        - answer.links.each do |link|
-          li= link_to link.name, link.url
+    .links
+      - if answer.links.count > 0
+        p Links:
+        ul
+          - answer.links.each do |link|
+            div class="link-#{link.id}"
+              - if link.gist?
+                script src="#{link.url}.js"
+              - else
+                li= link_to link.name, link.url
+              - if current_user&.author_of?(answer)
+                = link_to 'Delete link', link_path(link), method: :delete, remote: true
   - if answer.files.attached?
       - answer.files.each do |file|
         div id= file.id
