--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,11 +5,18 @@ p= link_to 'Back', questions_path
 
 = render @question
 
-.linkss
-  p Links:
-  ul
-    - @question.links.each do |link|
-      li= link_to link.name, link.url
+.links
+  - if @question.links.count > 0
+    p Links:
+    ul
+      - @question.links.each do |link|
+        div class="link-#{link.id}"
+          - if link.gist?
+            script src="#{link.url}.js"
+          - else
+            li= link_to link.name, link.url
+          - if current_user&.author_of?(@question)
+            = link_to 'Delete link', link_path(link), method: :delete, remote: true
 
 .answers
   = render @question.answers
