--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -32,6 +32,9 @@ div id="answer-#{answer.id}" class=(answer.best ? 'best' : '')
       p
         = f.label :files
         = f.file_field :files, multiple: true
+        = f.fields_for :links do |l|
+        .links
+          = link_to_add_association 'Add link', f, :links, partial: 'questions/link_fields'
       = f.submit 'Save'
   - if current_user&.author_of?(answer.question) && answer.persisted?
     p= link_to 'Best', choose_the_best_answer_path(answer), class: "best-answer", method: :patch, remote: true
