--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -25,4 +25,7 @@
       p
         = f.label :files
         = f.file_field :files, multiple: true
+        = f.fields_for :links do |l|
+        .links
+          = link_to_add_association 'Add link', f, :links, partial: 'questions/link_fields'
       = f.submit 'Save'
