--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -2,4 +2,5 @@ $('.question-errors').html('<%= render 'shared/errors', resource: @question %>')
 
 <% if !@question.errors.present? %>
   $('.question').html('<%= j render @question %>');
+  $('.question_links').html("<%= j render partial: 'links_list' %>");
 <% end %>
