best answer award

--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -21,4 +21,15 @@ p= link_to 'list of questions', questions_path
       .links
         = link_to_add_association 'Add link', f, :links
 
+    p Badge:
+    p
+      = f.fields_for :badge do |b|
+        p
+          = b.label :title, 'Badge title'
+          = b.text_field :title
+
+        p
+          = b.label :image
+          = b.file_field :image
+
   = f.submit 'Ask'
