--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,6 +2,7 @@
   = render 'shared/errors', resource: @question
 
 p= link_to 'Back', questions_path
+p= link_to 'My Badges', badges_path
 
 = render @question
 
