--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -9,6 +9,22 @@
           =" "
           - if current_user&.author_of?(@question)
             = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
+  .vote
+    p Vote:
+    div class="vote-#{@question.class.name.downcase}-#{@question.id}"
+      .rating
+        =  "rating: #{@question.rating}"
+      - unless current_user&.author_of?(@question)
+        .voting
+          = link_to 'up', polymorphic_path(@question, action: :vote_up),
+                                                              method: :post,
+                                                              remote: true,
+                                                              data: { type: :json }
+          = " | "
+          = link_to 'down', polymorphic_path(@question, action: :vote_down),
+                                                                method: :post,
+                                                                remote: true,
+                                                                data: { type: :json }
 
   - if current_user&.author_of?(@question)
     p= link_to 'Delete question', question_path(@question), method: :delete
