--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -7,7 +7,7 @@
         p
           = link_to file.filename.to_s, url_for(file)
           =" "
-          - if current_user&.author_of?(@question)
+          - if can? :destroy, file
             = link_to 'Delete file', attachment_path(file), method: :delete, remote: true
 
   .question_comments
@@ -21,8 +21,9 @@
   .vote
     = render 'shared/vote', resource: @question
 
-  - if current_user&.author_of?(@question)
+  - if can? :destroy, @question
     p= link_to 'Delete question', question_path(@question), method: :delete
+  - if can? :update, @question
     p= link_to 'Edit question', '#', class: 'edit-question-link', data: { question_id: @question.id }
     = form_with model: @question, class: 'hidden', html: { id: "edit-question" } do |f|
       p
